smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/byte-strings/text-block-missing-newline.smithy
// Syntax error at line 4, column 16: Error parsing byte text block: Text block must start with a new line | Model
namespace smithy.example

@documentation(b"""Hi""")
string MyString
